After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 796752 - PPPD_PATH not used
PPPD_PATH not used
Status: RESOLVED FIXED
Product: NetworkManager
Classification: Platform
Component: general
1.12.x
Other Linux
: Normal normal
: ---
Assigned To: NetworkManager maintainer(s)
NetworkManager maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2018-07-05 18:24 UTC by Jan Tojnar
Modified: 2018-07-09 09:35 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
meson: define PPPD_PATH variable (957 bytes, patch)
2018-07-05 18:25 UTC, Jan Tojnar
none Details | Review
ppp-manager: use configured pppd path (922 bytes, patch)
2018-07-05 18:25 UTC, Jan Tojnar
none Details | Review

Description Jan Tojnar 2018-07-05 18:24:19 UTC
pppd path can be configured but it is not used in the code. Moreover, meson does not even pass the variable to the code.
Comment 1 Jan Tojnar 2018-07-05 18:25:11 UTC
Created attachment 372954 [details] [review]
meson: define PPPD_PATH variable

configure.ac defines it just like it defines other PATH variables
for use with nm_utils_find_helper. Meson for some reason did not.
Comment 2 Jan Tojnar 2018-07-05 18:25:18 UTC
Created attachment 372955 [details] [review]
ppp-manager: use configured pppd path

Path to pppd can be set via configure flag but the source code ignores it.

Let's use PPPD_PATH like other calls of nm_utils_find_helper do.